@startuml

title __DINOSAUR's Class Diagram__\n

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.dinosaur {
        class ca.ulaval.glo4002.game.domain.dinosaur.Dinosaur {
            - gender : String
            - isNewlyAdded : boolean
            - name : String
            - species : String
            - strength : int
            - weight : int
            + Dinosaur()
            + feedFood()
            + feedWater()
            + getDiet()
            + getFoodNeed()
            + getGender()
            + getName()
            + getSpecies()
            + getStrength()
            + getWaterNeed()
            + getWeight()
            + isNewlyAdded()
            + setNewlyAdded()
            - calculateStrength()
            - getConsiderationByDietType()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.dinosaur {
        class ca.ulaval.glo4002.game.application.dinosaur.DinosaurFactory {
            {static} + MIN_WEIGHT : int
            + DinosaurFactory()
            + create()
            + validateName()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.dinosaur {
        interface ca.ulaval.glo4002.game.domain.dinosaur.HerdRepository {
            {abstract} + findAll()
            {abstract} + findByName()
            {abstract} + getSortedDinosaursByStrengthThenName()
            {abstract} + remove()
            {abstract} + reset()
            {abstract} + save()
        }
      }
    }
  }
  

  ca.ulaval.glo4002.game.domain.dinosaur.Dinosaur o-- ca.ulaval.glo4002.game.domain.dinosaur.enums.DietType : diet
  ca.ulaval.glo4002.game.application.dinosaur.DinosaurFactory o-- ca.ulaval.glo4002.game.domain.dinosaur.HerdRepository : herdRepository
  ca.ulaval.glo4002.game.application.dinosaur.DinosaurFactory o-- ca.ulaval.glo4002.game.domain.dinosaur.enums.SpeciesDietsCorrespondances : speciesDietsCorrespondances


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
